# i-am-committed

./: .gitignore  CLAUDE.md  Cargo.toml  homebrew-packaging-guide.md  mockup.md  readme.md  test-commit.md
.github/workflows/: rust.yml
.zed/: debug.json  tasks.json
docs/: launch.md  prompts.md
homebrew-formula-template/: README.md  iamcommitted.rb
hooks/: prepare-commit-msg.sh
src/: lib.rs  main.rs
src/ai/: mod.rs
src/commit_formatter/: formatter.rs  mod.rs  types.rs
src/config/: mod.rs  prompts.json  prompts.md
src/git/: mod.rs
