[package]
name = "iamcommitted"
version = "1.0.0"
edition = "2021"
description = "A command line application that generates Git commit messages based on the Git diff."
authors = ["Glyn Darkin"]

[dependencies]
fern = "0.6"
log = "0.4"
clap = { version = "4.4", features = ["derive"] }
colored = "2"
openai-api-rs = "5.2.6"
tokio = "1"
termion = "*"
regex = "1.10.2"
tempfile = "3.8"
chrono = "0.4"
